--- a/depot/index.htm
+++ b/depot/index.htm
@@ -32,12 +32,12 @@
 		<p><small><a href="./H6_DateTime.Form1.cs">H6n7_DateTime.Form1.cs</a></small></p>
 		<p><small><a href="./H6_DateTime.Form1.Designer.cs">H6n7_DateTime.Form1.Designer.cs</a></small></p>
 	<p> 4/6 RiverCrossingPuzzle</p>
-		<p><small><a href="./RiverQuest.Form1.cs">RiverQuest.Form1.cs</a></small></p> <small> 缺</small>
-		<p><small><a href="./RiverQuest.Form1.Designer.cs">RiverQuest.Form1.Designer.cs</a></small></p> <small> 缺</small>
+		<p><small><a href="./RiverQuest.Form1.cs">RiverQuest.Form1.cs</a> 從缺</small></p>
+		<p><small><a href="./RiverQuest.Form1.Designer.cs">RiverQuest.Form1.Designer.cs</a> 從缺</small></p> 
 	<p> 4/8 C# LINQ 3-Questions</p>
-		<p><small>H1_LoopReverse.cs</small></p><small> 缺</small>
-		<p><small>H2_LoopReverse.cs</small></p><small> 缺</small><
-		<p><small>H3_AnalyzeAddEven.cs</small></p><small> 缺</small><
+		<p><small>H1_LoopReverse.cs 從缺</small></p>
+		<p><small>H2_LoopReverse.cs 從缺</small></p>
+		<p><small>H3_AnalyzeAddEven.cs 從缺</small></p>
 	  </div>
 	</body>
 	</html>
