--- a/depot/index.htm
+++ b/depot/index.htm
@@ -16,6 +16,12 @@
 	</head>
 	
 	<body>
+	<div id="Logobar">
+	  
+	  <a href="#" id="logo"><img src="../CraftingIdle/img/wheat_icon.png" width="32px"> BuildSchool - C#</a> 
+	  
+	  <div id="Logobar-left">
+		<a class="active" href="#">v0.1</a></div>	
 	  <div style="margin-top:60px; padding:8px 8px 8px 8px;">
 
 	<p> 3/31. Pre-Test 3-Questions </p>
