--- a/index.htm
+++ b/index.htm
@@ -24,7 +24,7 @@
 
 	<p><a href="./CraftingIdle">CraftingIdle</a></p>
 	<p>New!</p>
-	<p><a href="./CSharp_depot">C#專案庫</a></p>
+	<p><a href="./depot">C#專案庫</a></p>
 	  </div>
 	</body>
 	</html>
