--- a/depot/index.htm
+++ b/depot/index.htm
@@ -27,9 +27,9 @@
   			<p><a href="./Q3_StringReplace.cs">Q3_StringReplace.cs</a></p></small>
 		<p> </p>
 	<p> 4/1. AprilFools'Homework 8-Questions </p>
-		<small> <p><a href="./H1_AnalyzeAddEven.cs">H1_AnalyzeAddEven.cs</a><</p>
+		<small> <p><a href="./H1_AnalyzeAddEven.cs">H1_AnalyzeAddEven.cs</a></p>
 			<p><a href="./H2_AnalyzeAddEven.cs">H2_AnalyzeAddEven.cs</a></p>
-			<p><a href="./H3_LoopReverse.cs">H3_LoopReverse.cs</a><</p>
+			<p><a href="./H3_LoopReverse.cs">H3_LoopReverse.cs</a></p>
 			<p><a href="./H4_LoopReverse.cs">H4_LoopReverse.cs</a></p>
 			<p><a href="./H5_LeapYear.cs">H5_LeapYear.cs</a></p>
 			<p><a href="./H6_DateTime.BasicData.cs">H6n7_DateTime.BasicData.cs</a></p>
