--- a/depot/index.htm
+++ b/depot/index.htm
@@ -18,7 +18,8 @@
 	<body>
 	<div id="Logobar">
 	  
-	  <a href="#" id="logo"><img src="../CraftingIdle/img/wheat_icon.png" width="32px"> BuildSchool - C#</a> 
+	  <a href="#" id="logo"><img src="../CraftingIdle/img/wheat_icon.png" width="32px"> BuildSchool - C#</a>
+	</div>
 	  <div style="margin-top:60px; padding:8px 8px 8px 8px;">
 
 	<p> 3/31. Pre-Test 3-Questions </p>
