--- a/depot/index.htm
+++ b/depot/index.htm
@@ -20,8 +20,9 @@
 	  
 	  <a href="#" id="logo"><img src="../CraftingIdle/img/wheat_icon.png" width="32px"> BuildSchool - C#</a>
 	</div>
-	  <div style="margin-top:60px; padding:8px 8px 8px 8px;">
-
+	  
+<div id="Logobar-left">
+<div style="margin-top:60px; padding:8px 8px 8px 8px;">
 	<p> 3/31. Pre-Test 3-Questions </p>
 		<small> <p><a href="./Q1_LoopWords.cs">Q1_LoopWords.cs</a></p>
   			<p><a href="./Q2_PrimeNumber.cs">Q2_PrimeNumber.cs</a></p>
@@ -46,6 +47,7 @@
 			<p>H2_LoopReverse.cs 從缺</p>
 			<p>H3_AnalyzeAddEven.cs 從缺</p> </small>
 		  	<p> </p>
+	</div>
 	  </div>
 	</body>
 	</html>
