--- a/depot/index.htm
+++ b/depot/index.htm
@@ -21,29 +21,29 @@
 	</div>
 	<div style="margin-top:60px; padding:8px 8px 8px 8px;">
 	<p> 3/31. Pre-Test 3-Questions </p>
-		<p></small><a href="./Q1_LoopWords.cs">Q1_LoopWords.cs</a> 既定</small></p>
-  		<p></small><a href="./Q2_PrimeNumber.cs">Q2_PrimeNumber.cs</a> 既定</small></p>
-  		<p></small><a href="./Q3_StringReplace.cs">Q3_StringReplace.cs</a> 既定</small></p>
-		<p>---</p>
+		<p></small><a href="./Q1_LoopWords.cs">Q1_LoopWords.cs</a></small></p>
+  		<p></small><a href="./Q2_PrimeNumber.cs">Q2_PrimeNumber.cs</a></small></p>
+  		<p></small><a href="./Q3_StringReplace.cs">Q3_StringReplace.cs</a></small></p>
+
 	<p> 4/1. AprilFools'Homework 8-Questions </p>
-		<p><small><a href="./H1_AnalyzeAddEven.cs">H1_AnalyzeAddEven.cs</a> 既定</small></p>
-		<p><small><a href="./H2_AnalyzeAddEven.cs">H2_AnalyzeAddEven.cs</a> 既定</small></p>
-		<p><small><a href="./H3_LoopReverse.cs">H3_LoopReverse.cs</a> 既定</small></p>
-		<p><small><a href="./H4_LoopReverse.cs">H4_LoopReverse.cs</a> 既定</small></p>
-		<p><small><a href="./H5_LeapYear.cs">H5_LeapYear.cs</a> 既定</small></p>
-		<p><small><a href="./H6_DateTime.BasicData.cs">H6n7_DateTime.BasicData.cs</a> 既定</small></p>
-		<p><small><a href="./H6_DateTime.Form1.cs">H6n7_DateTime.Form1.cs</a> 既定</small></p>
-		<p><small><a href="./H6_DateTime.Form1.Designer.cs">H6n7_DateTime.Form1.Designer.cs</a> 既定</small></p>
-		<p>---</p>
+		<p><small><a href="./H1_AnalyzeAddEven.cs">H1_AnalyzeAddEven.cs</a></small></p>
+		<p><small><a href="./H2_AnalyzeAddEven.cs">H2_AnalyzeAddEven.cs</a></small></p>
+		<p><small><a href="./H3_LoopReverse.cs">H3_LoopReverse.cs</a></small></p>
+		<p><small><a href="./H4_LoopReverse.cs">H4_LoopReverse.cs</a></small></p>
+		<p><small><a href="./H5_LeapYear.cs">H5_LeapYear.cs</a></small></p>
+		<p><small><a href="./H6_DateTime.BasicData.cs">H6n7_DateTime.BasicData.cs</a></small></p>
+		<p><small><a href="./H6_DateTime.Form1.cs">H6n7_DateTime.Form1.cs</a></small></p>
+		<p><small><a href="./H6_DateTime.Form1.Designer.cs">H6n7_DateTime.Form1.Designer.cs</a></small></p>
+
 	<p> 4/6 RiverCrossingPuzzle</p>
 		<p></small><a href="./RiverQuest.Form1.cs">RiverQuest.Form1.cs</a> 從缺</small></p>
 		<p></small><a href="./RiverQuest.Form1.Designer.cs">RiverQuest.Form1.Designer.cs</a> 從缺</small></p>
-		<p>---</p>
+
 	<p> 4/8 C# LINQ 3-Questions</p>
 		<p></small>H1_LoopReverse.cs 從缺</small></p>
 		<p></small>H2_LoopReverse.cs 從缺</small></p>
 		<p></small>H3_AnalyzeAddEven.cs 從缺</small></p>
-		 <p>---</p>
+
 	  </div>
 	</body>
 	</html>
