--- a/depot/index.htm
+++ b/depot/index.htm
@@ -1,31 +1,31 @@
-	<html>
-	
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-	<meta name="mobile-web-app-capable" content="yes">
-	<meta name="apple-mobile-web-app-capable" content="yes">
-	<meta name="apple-mobile-web-app-status-bar-style" content="black">
-	
 	<!-- ... NO Translate! I SAY NO! ... -->
-	<meta name="google" content="notranslate">
-		
-	<head> <title>狐狸寫過的作業</title>
+<meta name="google" content="notranslate">
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+<meta name="mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
+
+<html>
+<head>
+	<title>狐狸寫過的作業</title>
 	<link rel="shortcut icon" type="image/png" href="../CraftingIdle/img/wheat_icon.png">
 	<link rel="apple-touch-icon" sizes="120x120" href="../CraftingIdle/img/wheat_icon.png">
 	<link rel="stylesheet" type="text/css" href="../CraftingIdle/css/styles.css">
-	
-	</head>
-	
-	<body>
+
+</head>
+
+<body>
 	<div id="Logobar">
-	<a href="#" id="logo"><img src="../CraftingIdle/img/wheat_icon.png" width="32px"> BuildSchool - C#</a>
+		<a href="#" id="logo"><img src="../CraftingIdle/img/wheat_icon.png" width="32px"> BuildSchool - C#</a>
 	</div>
 	<div style="margin-top:60px; padding:8px 8px 8px 8px;">
-	<p> 3/31. Pre-Test 3-Questions </p>
-		<p></small><a href="./Q1_LoopWords.cs">Q1_LoopWords.cs</a></small></p>
-  		<p></small><a href="./Q2_PrimeNumber.cs">Q2_PrimeNumber.cs</a></small></p>
-  		<p></small><a href="./Q3_StringReplace.cs">Q3_StringReplace.cs</a></small></p>
+		<p> 3/31. Pre-Test 3-Questions </p>
+		<p><small><a href="./Q1_LoopWords.cs">Q1_LoopWords.cs</a></small></p>
+		<p><small><a href="./Q2_PrimeNumber.cs">Q2_PrimeNumber.cs</a></small></p>
+		<p><small><a href="./Q3_StringReplace.cs">Q3_StringReplace.cs</a></small></p>
 
-	<p> 4/1. AprilFools'Homework 8-Questions </p>
+		<p> 4/1. AprilFools'Homework 8-Questions </p>
 		<p><small><a href="./H1_AnalyzeAddEven.cs">H1_AnalyzeAddEven.cs</a></small></p>
 		<p><small><a href="./H2_AnalyzeAddEven.cs">H2_AnalyzeAddEven.cs</a></small></p>
 		<p><small><a href="./H3_LoopReverse.cs">H3_LoopReverse.cs</a></small></p>
@@ -35,15 +35,15 @@
 		<p><small><a href="./H6_DateTime.Form1.cs">H6n7_DateTime.Form1.cs</a></small></p>
 		<p><small><a href="./H6_DateTime.Form1.Designer.cs">H6n7_DateTime.Form1.Designer.cs</a></small></p>
 
-	<p> 4/6 RiverCrossingPuzzle</p>
-		<p></small><a href="./RiverQuest.Form1.cs">RiverQuest.Form1.cs</a> 從缺</small></p>
-		<p></small><a href="./RiverQuest.Form1.Designer.cs">RiverQuest.Form1.Designer.cs</a> 從缺</small></p>
+		<p> 4/6 RiverCrossingPuzzle</p>
+		<p><small><a href="./RiverQuest.Form1.cs">RiverQuest.Form1.cs</a> 從缺</small></p>
+		<p><small><a href="./RiverQuest.Form1.Designer.cs">RiverQuest.Form1.Designer.cs</a> 從缺</small></p>
 
-	<p> 4/8 C# LINQ 3-Questions</p>
-		<p></small>H1_LoopReverse.cs 從缺</small></p>
-		<p></small>H2_LoopReverse.cs 從缺</small></p>
-		<p></small>H3_AnalyzeAddEven.cs 從缺</small></p>
+		<p> 4/8 C# LINQ 3-Questions</p>
+		<p><small>H1_LoopReverse.cs 從缺</small></p>
+		<p><small>H2_LoopReverse.cs 從缺</small></p>
+		<p><small>H3_AnalyzeAddEven.cs 從缺</small></p>
 
-	  </div>
-	</body>
-	</html>
+	</div>
+</body>
+</html>
