--- a/index.htm
+++ b/index.htm
@@ -1,14 +1,13 @@
-﻿
-	<html>
+	
+	<!-- ... NO Translate! I SAY NO! ... -->
+	<meta name="google" content="notranslate">
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 	<meta name="mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
-	
-	<!-- ... NO Translate! I SAY NO! ... -->
-	<meta name="google" content="notranslate">
-		
+
+	<html>
 	<head> <title>狐狸的倉庫</title>
 	<link rel="shortcut icon" type="image/png" href="./CraftingIdle/img/wheat_icon.png">
 	<link rel="apple-touch-icon" sizes="120x120" href="./CraftingIdle//img/wheat_icon.png">
@@ -17,10 +16,12 @@
 	</head>
 	
 	<body>
+	<div id="Logobar">
+	<a href="#" id="logo"><img src="./CraftingIdle/img/wheat_icon.png" width="32px"> 狐狸的雜物間 </a>
+	</div>
 	  <div style="margin-top:60px; padding:8px 8px 8px 8px;">
 	
 	  <div class="title">雜物間 <small> 21/04/11 updata </small></div>
-	  <p>狐狸的雜物間.</p>
 
 	<p><a href="./CraftingIdle">CraftingIdle</a></p>
 	<p>New!</p>
