--- a/depot/index.htm
+++ b/depot/index.htm
@@ -43,9 +43,9 @@
 		<p><span class="small"><a href="./RiverQuest.Form1.Designer.cs">RiverQuest.Form1.Designer.cs</a> 從缺</span></p>
 
 		<p> 4/8 C# LINQ 3-Questions</p>
-		<p><span class="small">H1_LoopReverse.cs 從缺</span></p>
-		<p><span class="small">H2_LoopReverse.cs 從缺</span></p>
-		<p><span class="small">H3_AnalyzeAddEven.cs 從缺</span></p>
+		<p><span class="small"><a href="./H1_LoopReverse.cs">H1_LoopReverse.cs</a> 從缺</span></p>
+		<p><span class="small"><a href="./H2_LoopReverse.cs">H2_LoopReverse.cs</a> 從缺</span></p>
+		<p><span class="small"><a href="./H3_AnalyzeAddEven.cs">H3_AnalyzeAddEven.cs</a> 從缺</span></p>
 
 	</div>
 </body>
