--- a/index.htm
+++ b/index.htm
@@ -23,7 +23,7 @@
 	
 	  <div class="title">雜物間 <small> 21/04/11 updata </small></div>
 
-	<p><a href="./CraftingIdle">CraftingIdle</a></p>
+	<p><a href="./CraftingIdle">CraftingIdle</a> 技術力不足半棄坑</p>
 	<p>New!</p>
 	<p><a href="./depot">C#專案庫</a></p>
 	  </div>
