--- a/depot/index.htm
+++ b/depot/index.htm
@@ -39,8 +39,8 @@
 		<p><span class="small"><a href="./H6_DateTime.Form1.Designer.cs">H6n7_DateTime.Form1.Designer.cs</a></span></p>
 
 		<p> 4/6 RiverCrossingPuzzle</p>
-		<p><span class="small"><a href="./RiverQuest.Form1.cs">RiverQuest.Form1.cs</a> 從缺</span></p>
-		<p><span class="small"><a href="./RiverQuest.Form1.Designer.cs">RiverQuest.Form1.Designer.cs</a> 從缺</span></p>
+		<p><span class="small"><a href="./RiverQuest.Form1.cs">RiverQuest.Form1.cs</a></span></p>
+		<p><span class="small"><a href="./RiverQuest.Form1.Designer.cs">RiverQuest.Form1.Designer.cs</a></span></p>
 
 		<p> 4/8 C# LINQ 3-Questions</p>
 		<p><span class="small"><a href="./H1_LoopReverse.cs">H1_LoopReverse.cs</a> 從缺</span></p>
