--- a/depot/index.htm
+++ b/depot/index.htm
@@ -22,7 +22,8 @@
 	<div style="margin-top:60px; padding:8px 8px 8px 8px;">
 		<p><span class="small"><a href="../#"><<返回 </a></span></p>
 		<p> </p>
-		
+		 <p> <input id="myfile"  type="file"     /></p>
+    		<textarea  id="fileContent" cols="68" rows="10"  ></textarea>
 		<p> 3/31. Pre-Test 3-Questions </p>
 		<p><span class="small"><a href="./Q1_LoopWords.cs">Q1_LoopWords.cs</a></span></p>
 		<p><span class="small"><a href="./Q2_PrimeNumber.cs">Q2_PrimeNumber.cs</a></span></p>
