--- a/depot/index.htm
+++ b/depot/index.htm
@@ -20,34 +20,39 @@
 		<a href="#" id="logo"><img src="../CraftingIdle/img/tutrle_icon.png" width="32px"> BuildSchool - C#</a>
 	</div>
 	<div style="margin-top:60px; padding:8px 8px 8px 8px;">
-		<p><span class="small"><a href="../#"><<返回 </a></span></p>
-		<p> </p>
-		 <p> <input id="myfile"  type="file"     /></p>
-    		<textarea  id="fileContent" cols="68" rows="10"  ></textarea>
-		<p> 3/31. Pre-Test 3-Questions </p>
-		<p><span class="small"><a href="./Q1_LoopWords.cs">Q1_LoopWords.cs</a></span></p>
-		<p><span class="small"><a href="./Q2_PrimeNumber.cs">Q2_PrimeNumber.cs</a></span></p>
-		<p><span class="small"><a href="./Q3_StringReplace.cs">Q3_StringReplace.cs</a></span></p>
 
-		<p> 4/1. AprilFools'Homework 8-Questions </p>
-		<p><span class="small"><a href="./H1_AnalyzeAddEven.cs">H1_AnalyzeAddEven.cs</a></span></p>
-		<p><span class="small"><a href="./H2_AnalyzeAddEven.cs">H2_AnalyzeAddEven.cs</a></span></p>
-		<p><span class="small"><a href="./H3_LoopReverse.cs">H3_LoopReverse.cs</a></span></p>
-		<p><span class="small"><a href="./H4_LoopReverse.cs">H4_LoopReverse.cs</a></span></p>
-		<p><span class="small"><a href="./H5_LeapYear.cs">H5_LeapYear.cs</a></span></p>
-		<p><span class="small"><a href="./H6_DateTime.BasicData.cs">H6n7_DateTime.BasicData.cs</a></span></p>
-		<p><span class="small"><a href="./H6_DateTime.Form1.cs">H6n7_DateTime.Form1.cs</a></span></p>
-		<p><span class="small"><a href="./H6_DateTime.Form1.Designer.cs">H6n7_DateTime.Form1.Designer.cs</a></span></p>
+		<div id="WRAPPER">
+ 		<p><span class="small"><a href="../#"><<返回 </a></span></p>
+    			<div id="SIDE">
+				<p> 3/31. Pre-Test 3-Questions </p>
+				<p><span class="small"><a href="./Q1_LoopWords.cs">Q1_LoopWords.cs</a></span></p>
+				<p><span class="small"><a href="./Q2_PrimeNumber.cs">Q2_PrimeNumber.cs</a></span></p>
+				<p><span class="small"><a href="./Q3_StringReplace.cs">Q3_StringReplace.cs</a></span></p>
 
-		<p> 4/6 RiverCrossingPuzzle</p>
-		<p><span class="small"><a href="./RiverQuest.Form1.cs">RiverQuest.Form1.cs</a></span></p>
-		<p><span class="small"><a href="./RiverQuest.Form1.Designer.cs">RiverQuest.Form1.Designer.cs</a></span></p>
+				<p> 4/1. AprilFools'Homework 8-Questions </p>
+				<p><span class="small"><a href="./H1_AnalyzeAddEven.cs">H1_AnalyzeAddEven.cs</a></span></p>
+				<p><span class="small"><a href="./H2_AnalyzeAddEven.cs">H2_AnalyzeAddEven.cs</a></span></p>
+				<p><span class="small"><a href="./H3_LoopReverse.cs">H3_LoopReverse.cs</a></span></p>
+				<p><span class="small"><a href="./H4_LoopReverse.cs">H4_LoopReverse.cs</a></span></p>
+				<p><span class="small"><a href="./H5_LeapYear.cs">H5_LeapYear.cs</a></span></p>
+				<p><span class="small"><a href="./H6_DateTime.BasicData.cs">H6n7_DateTime.BasicData.cs</a></span></p>
+				<p><span class="small"><a href="./H6_DateTime.Form1.cs">H6n7_DateTime.Form1.cs</a></span></p>
+				<p><span class="small"><a href="./H6_DateTime.Form1.Designer.cs">H6n7_DateTime.Form1.Designer.cs</a></span></p>
 
-		<p> 4/8 C# LINQ 3-Questions</p>
-		<p><span class="small"><a href="./H1_LoopReverse.cs">H1_LoopReverse.cs</a> 從缺</span></p>
-		<p><span class="small"><a href="./H2_LoopReverse.cs">H2_LoopReverse.cs</a> 從缺</span></p>
-		<p><span class="small"><a href="./H3_AnalyzeAddEven.cs">H3_AnalyzeAddEven.cs</a> 從缺</span></p>
+				<p> 4/6 RiverCrossingPuzzle</p>
+				<p><span class="small"><a href="./RiverQuest.Form1.cs">RiverQuest.Form1.cs</a></span></p>
+				<p><span class="small"><a href="./RiverQuest.Form1.Designer.cs">RiverQuest.Form1.Designer.cs</a></span></p>
 
+				<p> 4/8 C# LINQ 3-Questions</p>
+				<p><span class="small"><a href="./H1_LoopReverse.cs">H1_LoopReverse.cs</a> 從缺</span></p>
+				<p><span class="small"><a href="./H2_LoopReverse.cs">H2_LoopReverse.cs</a> 從缺</span></p>
+				<p><span class="small"><a href="./H3_AnalyzeAddEven.cs">H3_AnalyzeAddEven.cs</a> 從缺</span></p>
+    			</div>
+ 
+    			<div id="CONTENT">
+				<textarea  id="fileContent" cols="68" rows="10"  ></textarea>
+    			</div>
+		</div>
 	</div>
 </body>
 </html>
