--- a/index.htm
+++ b/index.htm
@@ -1,12 +1,13 @@
-	
+	<!DOCTYPE html>
 	<!-- ... NO Translate! I SAY NO! ... -->
 	<meta name="google" content="notranslate">
-	
+	<html lang="zh_TW">
+	<head>
+    	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 	<meta name="mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
-
 	<html>
 	<head> <title>狐狸的倉庫</title>
 	<link rel="shortcut icon" type="image/png" href="./CraftingIdle/img/fox_icon.png">
@@ -21,7 +22,7 @@
 	</div>
 	  <div style="margin-top:60px; padding:8px 8px 8px 8px;">
 	
-	  <div class="title">雜物間 <small> 21/04/11 updata </small></div>
+	  <div class="title">雜物間 <small> 21/04/ updata </small></div>
 
 	<p><a href="./CraftingIdle">CraftingIdle</a> 技術力不足半棄坑</p>
 	<p>New!</p>
