--- a/index.htm
+++ b/index.htm
@@ -1,21 +1,19 @@
 	<!DOCTYPE html>
-	<!-- ... NO Translate! I SAY NO! ... -->
-	<meta name="google" content="notranslate">
+
 	<html lang="zh_TW">
 	<head>
+	<!-- ... NO Translate! I SAY NO! ... -->
+	<meta name="google" content="notranslate">
     	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 	<meta name="mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
-	<html>
-	<head> <title>狐狸的倉庫</title>
+	<title>狐狸的倉庫</title>
 	<link rel="shortcut icon" type="image/png" href="./CraftingIdle/img/fox_icon.png">
 	<link rel="apple-touch-icon" sizes="120x120" href="./CraftingIdle//img/fox_icon.png">
 	<link rel="stylesheet" type="text/css" href="./CraftingIdle/css/styles.css">
-	
 	</head>
-	
 	<body>
 	<div id="Logobar">
 	<a href="#" id="logo"><img src="./CraftingIdle/img/fox_icon.png" width="32px"> 狐狸的雜物間 </a>
