--- a/index.htm
+++ b/index.htm
@@ -19,8 +19,7 @@
 	<a href="#" id="logo"><img src="./CraftingIdle/img/fox_icon.png" width="32px"> 狐狸的雜物間 </a>
 	</div>
 	  <div style="margin-top:60px; padding:8px 8px 8px 8px;">
-	
-	  <div class="title">雜物間 <small> 21/04/ updata </small></div>
+	  <div class="title">雜物間 <small> 21/04/27 updata </small></div>
 
 	<p><a href="./CraftingIdle">CraftingIdle</a> 技術力不足半棄坑</p>
 	<p>New!</p>
