--- a/index.htm
+++ b/index.htm
@@ -1,29 +1,26 @@
 	<!DOCTYPE html>
-
 	<html lang="zh_TW">
-	<head>
-	<!-- ... NO Translate! I SAY NO! ... -->
-	<meta name="google" content="notranslate">
-    	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-	<meta name="mobile-web-app-capable" content="yes">
-	<meta name="apple-mobile-web-app-capable" content="yes">
-	<meta name="apple-mobile-web-app-status-bar-style" content="black">
-	<title>狐狸的倉庫</title>
-	<link rel="shortcut icon" type="image/png" href="./CraftingIdle/img/fox_icon.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="./CraftingIdle//img/fox_icon.png">
-	<link rel="stylesheet" type="text/css" href="./CraftingIdle/css/styles.css">
-	</head>
+		<head>
+			<meta name="google" content="notranslate">
+			<meta charset="UTF-8">
+			<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+			<meta name="mobile-web-app-capable" content="yes">
+			<meta name="apple-mobile-web-app-capable" content="yes">
+			<meta name="apple-mobile-web-app-status-bar-style" content="black">
+		<title>403 Forbidden</title>
+		<link rel="shortcut icon" type="image/png" href="./CraftingIdle/img/fox_icon.png">
+		<link rel="apple-touch-icon" sizes="120x120" href="./CraftingIdle//img/fox_icon.png">
+		<link rel="stylesheet" type="text/css" href="./CraftingIdle/css/styles.css">
+		</head>
 	<body>
-	<div id="Logobar">
-	<a href="#" id="logo"><img src="./CraftingIdle/img/fox_icon.png" width="32px"> 狐狸的雜物間 </a>
-	</div>
-	  <div style="margin-top:60px; padding:8px 8px 8px 8px;">
-	  <div class="title">雜物間 <small> 21/04/27 updata </small></div>
-
-	<p><a href="./CraftingIdle">CraftingIdle</a> 技術力不足半棄坑</p>
+		<div id="Logobar">
+		<a href="#" id="logo"><img src="./CraftingIdle/img/fox_icon.png" width="32px"> 403 Forbidden </a>
+		</div>
+	<div style="margin-top:60px; padding:8px 8px 8px 8px;">
+	<div class="title">雜物間 <small> 21/04/27 updata </small></div>
+	<a href="./CraftingIdle">CraftingIdle</a> 技術力不足半棄坑
 	<p>New!</p>
-	<p><a href="./depot">C#專案庫</a></p>
-	  </div>
+	<a href="./depot">C#專案庫</a>
+	</div>
 	</body>
 	</html>
