炫砲的背景

--- a/depot/Homework02.html
+++ b/depot/Homework02.html
@@ -5,6 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../CraftingIdle/css/styles.css">
+    <style>
+    body{
+    background-image: linear-gradient(115deg, black 45%, transparent 45%);
+}
+    p{
+        text-align: right;
+        font-size: 60pt;
+    }
+    </style>
     <title>Document</title>
 </head>
 <body>
