--- a/depot/Homework02.html
+++ b/depot/Homework02.html
@@ -5,18 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../CraftingIdle/css/styles.css">
-    <style>
-    body{
-    background-image: linear-gradient(115deg, black 45%, transparent 45%);
-}
+    <style> 
     p{
-        text-align: right;
-        font-size: 60pt;
+        font-size: 48pt;
+        transition: 1s;
     }
+    p:hover{
+        color:seagreen;
+    }
+    p:active{
+        color:deeppink;
+    }
+    .box{
+        border-radius: 50%;
+        width: 200px;
+        height: 200px;
+        background: crimson;
+        transition: 1s;
+}
+.box:hover{
+        background-color: seagreen;
+}
     </style>
     <title>Document</title>
 </head>
 <body>
+    <div class="box"> </div>
     <p>作業二</p>
 </body>
 </html>
