--- a/A-GoLan.html
+++ b/A-GoLan.html
@@ -18,8 +18,8 @@
         }
         .banner 
         {
-            width: 1200px;
-            height: 400px;
+            width: 960px;
+            height: 450px;
             margin: auto;
             display: flex;
             flex-wrap: wrap;
@@ -50,7 +50,7 @@
         }
         .container
         {
-            width: 1200px;
+            width: 960px;
             border:2px solid none;
             margin: auto;
             display: flex;
@@ -60,7 +60,7 @@
         .item
         {
             text-align: center;
-            width: 290px;
+            width: 230px;
             border: 1px solid beige;
             box-sizing: border-box;
             margin: 5px;
@@ -121,7 +121,7 @@
         .infoabout
         {
             box-sizing: border-box;
-            width: 600px;
+            width: 470px;
             margin: auto;
             padding: 10px 0px 50px 0px;
         }
@@ -168,12 +168,44 @@
         <a href="">不想運動運動會</a>
         <a href="">獸可思黑漆漆生日館</a>
     </topnav>
-        <div class="banner"><img src="https://fakeimg.pl/1200x400/eeeeee"></div>
+        <div class="banner"><img src="https://fakeimg.pl/960x450/eeeeee"></div>
     <div class="txt">
         <h3>新品上市</h3>
         <hr>
     </div>
     <div class="container">
+        <div class="item">
+            <img src="https://fakeimg.pl/300x300/eeeeee">
+            <div class="txt">
+                <h3>Title</h3>
+                <p>NT$ 2,000</p>
+            </div>
+            <input type="button" id="button" value="加入購物車">
+        </div>
+        <div class="item">
+            <img src="https://fakeimg.pl/300x300/eeeeee">
+            <div class="txt">
+                <h3>Title</h3>
+                <p>NT$ 2,000</p>
+            </div>
+            <input type="button" id="button" value="加入購物車">
+        </div>
+        <div class="item">
+            <img src="https://fakeimg.pl/300x300/eeeeee">
+            <div class="txt">
+                <h3>Title</h3>
+                <p>NT$ 2,000</p>
+            </div>
+            <input type="button" id="button" value="加入購物車">
+        </div>
+        <div class="item">
+            <img src="https://fakeimg.pl/300x300/eeeeee">
+            <div class="txt">
+                <h3>Title</h3>
+                <p>NT$ 2,000</p>
+            </div>
+            <input type="button" id="button" value="加入購物車">
+        </div>
         <div class="item">
             <img src="https://fakeimg.pl/300x300/eeeeee">
             <div class="txt">
@@ -217,9 +249,165 @@
             <a href="">»</a>
         </nav>
 
-
     <div class="txt">
         <h3>不想運動運動會</h3>
+        <hr>
+        <div class="container">
+            <div class="item">
+                <img src="https://fakeimg.pl/300x300/eeeeee">
+                <div class="txt">
+                    <h3>Title</h3>
+                    <p>NT$ 2,000</p>
+                </div>
+                <input type="button" id="button" value="加入購物車">
+            </div>
+            <div class="item">
+                <img src="https://fakeimg.pl/300x300/eeeeee">
+                <div class="txt">
+                    <h3>Title</h3>
+                    <p>NT$ 2,000</p>
+                </div>
+                <input type="button" id="button" value="加入購物車">
+            </div>
+            <div class="item">
+                <img src="https://fakeimg.pl/300x300/eeeeee">
+                <div class="txt">
+                    <h3>Title</h3>
+                    <p>NT$ 2,000</p>
+                </div>
+                <input type="button" id="button" value="加入購物車">
+            </div>
+            <div class="item">
+                <img src="https://fakeimg.pl/300x300/eeeeee">
+                <div class="txt">
+                    <h3>Title</h3>
+                    <p>NT$ 2,000</p>
+                </div>
+                <input type="button" id="button" value="加入購物車">
+            </div>
+            <div class="item">
+                <img src="https://fakeimg.pl/300x300/eeeeee">
+                <div class="txt">
+                    <h3>Title</h3>
+                    <p>NT$ 2,000</p>
+                </div>
+                <input type="button" id="button" value="加入購物車">
+            </div>
+            <div class="item">
+                <img src="https://fakeimg.pl/300x300/eeeeee">
+                <div class="txt">
+                    <h3>Title</h3>
+                    <p>NT$ 2,000</p>
+                </div>
+                <input type="button" id="button" value="加入購物車">
+            </div>
+            <div class="item">
+                <img src="https://fakeimg.pl/300x300/eeeeee">
+                <div class="txt">
+                    <h3>Title</h3>
+                    <p>NT$ 2,000</p>
+                </div>
+                <input type="button" id="button" value="加入購物車">
+            </div>
+            <div class="item">
+                <img src="https://fakeimg.pl/300x300/eeeeee">
+                <div class="txt">
+                    <h3>Title</h3>
+                    <p>NT$ 2,000</p>
+                </div>
+                <input type="button" id="button" value="加入購物車">
+            </div>
+        </div>
+        <nav>
+            <a href="">«</a>
+            <a href="">1</a>
+            <a href="">2</a>
+            <a href="">3</a>
+            <a href="">4</a>
+            <a href="">»</a>
+        </nav>
+    </div> 
+
+    <div class="txt">
+        <h3>CreASEnse客制化手機殼</h3>
+        <hr>
+        <div class="container">
+            <div class="item">
+                <img src="https://fakeimg.pl/300x300/eeeeee">
+                <div class="txt">
+                    <h3>Title</h3>
+                    <p>NT$ 2,000</p>
+                </div>
+                <input type="button" id="button" value="加入購物車">
+            </div>
+            <div class="item">
+                <img src="https://fakeimg.pl/300x300/eeeeee">
+                <div class="txt">
+                    <h3>Title</h3>
+                    <p>NT$ 2,000</p>
+                </div>
+                <input type="button" id="button" value="加入購物車">
+            </div>
+            <div class="item">
+                <img src="https://fakeimg.pl/300x300/eeeeee">
+                <div class="txt">
+                    <h3>Title</h3>
+                    <p>NT$ 2,000</p>
+                </div>
+                <input type="button" id="button" value="加入購物車">
+            </div>
+            <div class="item">
+                <img src="https://fakeimg.pl/300x300/eeeeee">
+                <div class="txt">
+                    <h3>Title</h3>
+                    <p>NT$ 2,000</p>
+                </div>
+                <input type="button" id="button" value="加入購物車">
+            </div>
+            <div class="item">
+                <img src="https://fakeimg.pl/300x300/eeeeee">
+                <div class="txt">
+                    <h3>Title</h3>
+                    <p>NT$ 2,000</p>
+                </div>
+                <input type="button" id="button" value="加入購物車">
+            </div>
+            <div class="item">
+                <img src="https://fakeimg.pl/300x300/eeeeee">
+                <div class="txt">
+                    <h3>Title</h3>
+                    <p>NT$ 2,000</p>
+                </div>
+                <input type="button" id="button" value="加入購物車">
+            </div>
+            <div class="item">
+                <img src="https://fakeimg.pl/300x300/eeeeee">
+                <div class="txt">
+                    <h3>Title</h3>
+                    <p>NT$ 2,000</p>
+                </div>
+                <input type="button" id="button" value="加入購物車">
+            </div>
+            <div class="item">
+                <img src="https://fakeimg.pl/300x300/eeeeee">
+                <div class="txt">
+                    <h3>Title</h3>
+                    <p>NT$ 2,000</p>
+                </div>
+                <input type="button" id="button" value="加入購物車">
+            </div>
+        </div>
+        <nav>
+            <a href="">«</a>
+            <a href="">1</a>
+            <a href="">2</a>
+            <a href="">3</a>
+            <a href="">4</a>
+            <a href="">»</a>
+        </nav>
+    </div>
+    <div class="txt">
+        <h3>聯名寢具</h3>
         <hr>
         <div class="container">
             <div class="item">
@@ -260,11 +448,9 @@
             <a href="">1</a>
             <a href="">2</a>
             <a href="">3</a>
-            <a href="">4</a>
-            <a href="">5</a>
             <a href="">»</a>
         </nav>
-    </div> 
+    </div>  
     <hr>
 <div class="container">
     <div class="infoabout">
@@ -283,7 +469,7 @@
         <p>授權合作信箱 ： -------- @gmail.com</p>
         <p>批發合作信箱 ： -------- @gmail.com</p>
     </div>
-    </div>
+</div>
     <div class="copyright">
     <p>🐾藍阿狗公腰生活© 2021 FuNsCases .All Rights Reserved.</p>
     </div>
