--- a/A-GoLan.html
+++ b/A-GoLan.html
@@ -8,7 +8,7 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>🐾藍阿狗公腰生活｜FuNsCases 官方網站</title>
+    <title>🐾藍阿狗恭腰生活｜FuNsCases 官方網站</title>
     <style>
         body {
             font-size: 20;
@@ -471,7 +471,7 @@
     </div>
 </div>
     <div class="copyright">
-    <p>🐾藍阿狗公腰生活© 2021 FuNsCases .All Rights Reserved.</p>
+    <p>🐾藍阿狗恭腰生活© 2021 FuNsCases .All Rights Reserved.</p>
     </div>
 </form>
 </body>
