作業 4.0 大GUY 明天以前不會再修改ㄅ

--- a/A-GoLan.html
+++ b/A-GoLan.html
@@ -20,6 +20,7 @@
         {
             width: 960px;
             height: 450px;
+            padding: 0px 0px 50px 0px;
             margin: auto;
             display: flex;
             flex-wrap: wrap;
@@ -155,7 +156,7 @@
 <body>
     <form action="">
     <div class="container">
-        <h1>🐾藍阿狗公腰生活</h1>
+        <h1>🐾藍阿狗恭腰生活</h1>
     </div>
     <topnav>
         <a href="">首頁</a>
