--- a/A-GoLan.html
+++ b/A-GoLan.html
@@ -21,6 +21,7 @@
             width: 960px;
             height: 450px;
             margin: auto;
+            padding: 0px 0px 50px 0px;
             display: flex;
             flex-wrap: wrap;
             justify-content: space-between;
