--- a/A-GoLan.html
+++ b/A-GoLan.html
@@ -167,7 +167,7 @@
 <body>
     <form action="">
     <div class="container">
-        <h1>🐾藍阿狗公腰生活</h1>
+        <h1>🐾藍阿狗恭腰生活</h1>
     </div>
     <topnav>
         <a href="">首頁</a>
