沒有改手手

--- a/A-GoLan.html
+++ b/A-GoLan.html
@@ -60,6 +60,7 @@
         }
         .item
         {
+            cursor: pointer;
             text-align: center;
             width: 230px;
             height: 300px;
