--- a/A-GoLan.html
+++ b/A-GoLan.html
@@ -120,7 +120,7 @@
             text-align: center;
             background-color: white;
             border-radius: 5px;
-            transition: 0.5s;
+            transition: 0.2s;
             border: 0px solid white;
             position:relative;
             top:-127px;
@@ -130,6 +130,11 @@
         {
             color: white;
             background-color: gold;
+        }
+        .item input#button:active
+        {
+            color: white;
+            background-color: olive;
         }
         .infoabout
         {
