--- a/A-GoLan.html
+++ b/A-GoLan.html
@@ -138,16 +138,25 @@
         }
         .infoabout
         {
+            font-size:  16px;
             box-sizing: border-box;
-            width: 470px;
-            margin: auto;
+            width: 480px;
             padding: 10px 0px 50px 0px;
+        }
+        .infoabout p
+        {
+            padding: 5px 5px;
+            margin: 5px 5px;
+            text-decoration: none;
+            display: block;
         }
         .infoabout a
         {
+            padding: 5px 5px;
+            margin: 5px 5px;
             text-decoration: none;
-            line-height: 2;
             display: block;
+            color: #303030;
         }
         .txt p{
             color: gold;
