rrrrrr 要睡覺了啦qqq

--- a/A-GoLan.html
+++ b/A-GoLan.html
@@ -498,7 +498,8 @@
     </div>
 </div>
     <div class="copyright">
-    <p>🐾藍阿狗恭腰生活© 2021 FuNsCases .All Rights Reserved.</p>
+    <p>🐾藍阿狗恭腰生活© 2021 FuNsCases .All Rights Reserved.
+    <br>This WebForm isn't a Real Website, It's a Program Class Exercise</p>
     </div>
 </form>
 </body>
