--- a/A-GoLan.html
+++ b/A-GoLan.html
@@ -28,14 +28,13 @@
         }
         topnav
         { 
-            height: 120px;
+            height: 140px;
             display: block;
             font-size:  20px;
             padding: 5px 10px;
             text-align: center;
         }
         topnav a{
-
             background-color: none;
             text-decoration: none;
             border-radius:5px;
@@ -74,7 +73,7 @@
         }
         .item:hover .pic2 img
         {
-            filter: brightness(0.3);
+            filter: brightness(35%);
             opacity: 100;
         }
         .pic 
@@ -193,13 +192,10 @@
         }
     </style>
 </head>
-
 <body>
     <form action="">
-    <div class="container">
-        <h1>🐾藍阿狗恭腰生活</h1>
-    </div>
     <topnav>
+        <h1>🐾藍阿狗恭腰生活</h1>
         <a href="">首頁</a>
         <a href="">品牌故事</a>
         <a href="">所有商品<i class="fas fa-angle-down"></i></a>
