--- a/A-GoLan.html
+++ b/A-GoLan.html
@@ -21,28 +21,36 @@
             width: 960px;
             height: 450px;
             margin: auto;
-            padding: 0px 0px 50px 0px;
+            padding: 160px 0px 50px 0px;
             display: flex;
             flex-wrap: wrap;
             justify-content: space-between;
         }
         topnav
         { 
+            width: 100%;
             height: 140px;
+            z-index: 99;
+            background-color: white;
+            transition: top 0.3s;
+            top:auto;
+            left: 0;
+            top: 0;
+            margin: auto;
+            position:fixed;
+
             display: block;
             font-size:  20px;
             padding: 5px 10px;
             text-align: center;
         }
         topnav a{
+            float:none;
             background-color: none;
             text-decoration: none;
             border-radius:5px;
             color: black;
             padding: 5px 10px;
-        }
-        topnav a:hover{
-            color: #eeeeee;
         }
         .banner img
         {
@@ -105,6 +113,7 @@
         }
         nav
         { 
+            width: 100%;
             font-size:  24px;
             text-align: center;
             padding: 30px 0px 100px 0px;
@@ -180,6 +189,7 @@
         }
         .copyright
         {
+            width: 100%;
             height: 75px;
             background-color: #eeeeee;
             margin: auto;
