--- a/A-GoLan.html
+++ b/A-GoLan.html
@@ -135,6 +135,9 @@
             width: 32px;
             background-color:gold;
         }
+        hr{
+            width: 100%;
+        }
         .item input#button
         {
             width: 208px;
