--- a/A-GoLan.html
+++ b/A-GoLan.html
@@ -136,7 +136,10 @@
             background-color:gold;
         }
         hr{
-            width: 100%;
+            width: 99%;
+            height:1px;
+            border-width:0;
+            background-color: #eee;
         }
         .item input#button
         {
