--- a/AgoLan/index.html
+++ b/AgoLan/index.html
@@ -9,209 +9,9 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" type="text/css" href=".\css\style.css">
+    <link rel="shortcut icon" type="image/gif" href=".\img\crrewweascx.gif">
     <title>🐾藍阿狗恭腰生活｜FuNsCases 官方網站</title>
-    <style>
-        body {
-            padding: 0px;
-            margin: 0px;   
-            line-height: 1;
-        }
-        .banner 
-        {
-            width: 960px;
-            height: 450px;
-            margin: auto;
-            padding: 160px 0px 50px 0px;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
-        }
-        .banner img
-        {
-            width: 800px;
-            height: 450px;
-        }
-        topnav
-        { 
-            width: 100%;
-            height: 140px;
-            z-index: 99;
-            background-color: white;
-            transition: top 0.3s;
-            top:auto;
-            left: 0;
-            top: 0;
-            margin: auto;
-            position:fixed;
-
-            display: block;
-            font-size:  20px;
-            padding: 5px 10px;
-            text-align: center;
-        }
-        topnav a{
-            float:none;
-            background-color: none;
-            text-decoration: none;
-            border-radius:5px;
-            color: black;
-            padding: 5px 10px;
-        }
-        .banner img
-        {
-            width: 100%;
-        }
-        .container
-        {
-            width: 960px;
-            border:2px solid none;
-            margin: auto;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
-        }
-        .item
-        {
-            cursor: pointer;
-            text-align: center;
-            width: 230px;
-            height: 300px;
-            border: 1px solid beige;
-            box-sizing: border-box;
-            margin: 5px;
-        }
-        .item:hover input#button
-        {
-            display:block;
-        }
-        .item:hover .pic2 img
-        {
-            filter: brightness(35%);
-            opacity: 100;
-        }
-        .pic 
-        {
-            position: absolute;
-            width: 230px;
-            height: 300px;
-        }
-        .pic1 img
-        {
-            width: 100%;
-            transition: 0.2s;
-        }
-        .pic2 img 
-        {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            transition: 0.2s;
-            opacity: 0;
-        }
-        .txt h3
-        {
-            font-weight: normal;
-            font-size: 16px;
-            text-align:center;
-            margin: 10px 10px;
-        }
-        nav
-        { 
-            width: 100%;
-            font-size:  24px;
-            text-align: center;
-            padding: 30px 0px 100px 0px;
-        }
-        nav a{
-            background-color: none;
-            text-decoration: none;
-            border-radius:5px;
-            color: black;
-            padding: 5px 10px;
-        }
-        nav a:hover{
-            color: #eeeeee;
-        }
-        .txt hr
-        {
-            height:2px;
-            border-width:0;
-            width: 32px;
-            background-color:gold;
-        }
-        hr{
-            width: 99%;
-            height:1px;
-            border-width:0;
-            background-color: #eee;
-        }
-        .item input#button
-        {
-            width: 208px;
-            height: 48px;
-            cursor: pointer;
-            display: none;
-            background-color: white;
-            border-radius: 5px;
-            transition: 0.2s;
-            border: 0px solid white;
-            position: relative;
-            bottom: 128px;
-            left: 10px;
-        }
-        .item input#button:hover
-        {
-            color: white;
-            background-color: gold;
-        }
-        .item input#button:active
-        {
-            color: white;
-            background-color: olive;
-        }
-        .infoabout
-        {
-            font-size:  16px;
-            box-sizing: border-box;
-            width: 480px;
-            padding: 10px 0px 50px 0px;
-        }
-        .infoabout p
-        {
-            padding: 5px 5px;
-            margin: 5px 5px;
-            text-decoration: none;
-            display: block;
-        }
-        .infoabout a
-        {
-            padding: 5px 5px;
-            margin: 5px 5px;
-            text-decoration: none;
-            display: block;
-            color: #303030;
-        }
-        .txt p{
-            color: gold;
-            text-align:center;
-            margin: 10px 10px;
-            margin-bottom: 10px;
-        }
-        .copyright
-        {
-            width: 100%;
-            height: 75px;
-            background-color: #eeeeee;
-            margin: auto;
-        }
-        .copyright p
-        {
-            padding: 30px 30px;
-            font-size: 14px;
-            text-align: center;
-        }
-    </style>
 </head>
 <body>
     <form action="">
