--- a/AgoLan/index.html
+++ b/AgoLan/index.html
@@ -25,7 +25,7 @@
         <a href="">阿狗書店</a>
         <a href="">手機周邊<i class="fas fa-angle-down"></i></a>
         <a href="">不想運動運動會</a>
-        <a href="">獸可思黑漆漆生日館</a>
+        <a href="">獸可思夜生活館</a>
     </topnav>
         <div class="banner"><img src=".\img\crrewweascx.gif"></div>
     <div class="txt">
@@ -522,7 +522,7 @@
     </div>
 </div>
     <div class="copyright">
-    <p>🐾藍阿狗恭腰生活© 2021 FuNsCases .All Rights Reserved.
+    <p>🐾藍阿狗恭腰生活© 2021 FuNsCases. All Rights Reserved.
     <br>This WebForm isn't a Real Website, It's a Program Class Exercise</p>
     </div>
 </form>
