--- a/AgoLan/index.html
+++ b/AgoLan/index.html
@@ -1,6 +1,8 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="https://kit.fontawesome.com/d9344064ff.js" crossorigin="anonymous"></script>
     <meta name="google" content="notranslate">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 	<meta name="mobile-web-app-capable" content="yes">
@@ -15,20 +17,10 @@
     <form action="">
     <div class="topnav">
         <img src=".\img\Ama.png" width="64px" height="64px" alt="">
-        <input type="button" id="button" value="首頁">
-        <input type="button" id="button" value="品牌故事">
-        <input type="button" class="prodbtn" id="button" value="所有商品">
-            <div class="product">
-                <a href="">新品上市</a>
-                <a href="">現貨商品</a>
-                <a href="">預購商品</a>
-            </div>
-        <input type="button" class="homelife" id="button" value="居家生活">
-            <div class="homelife">
-                <a href="">居家小物</a>
-                <a href="">聯名寢具</a>
-                <a href="">珪藻土</a>
-            </div>
+        <a href="">首頁</a>
+        <a href="">品牌故事</a>
+        <a href="">所有商品<i class="fas fa-angle-down"></i></a>
+        <a href="">居家生活<i class="fas fa-angle-down"></i></a>
         <a href="">玩具公仔<i class="fas fa-angle-down"></i></a>
         <a href="">阿狗書店</a>
         <a href="">手機周邊<i class="fas fa-angle-down"></i></a>
